--- a/shard.yml
+++ b/shard.yml
@@ -34,6 +34,8 @@ dependencies:
     github: 84codes/lz4.cr
   mqtt-protocol:
     github: 84codes/mqtt-protocol.cr
+  jwt:
+    github: crystal-community/jwt
 
 development_dependencies:
   ameba:
