--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -187,7 +187,7 @@ jobs:
         run: npx playwright install --with-deps
 
       - name: Run tests
-        run: npx playwright test --config ./spec/frontend/playwright.config.js
+        run: npx playwright test --config ./spec/frontend/playwright.config.js --reporter list
 
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
