Improved default config
Drop unused properties from Config
Correct defaults in help banner
Default to listen to all address in debian/fedora config

--- a/extras/lavinmq.ini
+++ b/extras/lavinmq.ini
@@ -1,24 +1,29 @@
 [main]
 data_dir = /var/lib/lavinmq
-default_user_only_loopback = true
 log_level = info
-;log_file = /var/log/lavinmq.log
-;socket_buffer_size = 16384
+;default_user_only_loopback = true
 ;tls_cert = /etc/lavinmq/cert.pem
 ;tls_key = /etc/lavinmq/key.pem
-;tls_min_version = 1.2
-;tcp_keepalive = 60:10:3
 
 [mgmt]
-bind = 0.0.0.0
-port = 15672
-tls_port = 15671
-unix_path = /tmp/lavinmq-http.sock
+bind = ::
+;port = 15672
+;tls_port = 15671
 
 [amqp]
-bind = 0.0.0.0
-port = 5672
-tcp_proxy_protocol = false
-tls_port = 5671
-unix_path = /tmp/lavinmq.sock
-unix_proxy_protocol = true
+bind = ::
+;port = 5672
+;tls_port = 5671
+
+[mqtt]
+bind = ::
+;default_vhost = /
+;port = 1883
+;tls_port = 8883
+
+[clustering]
+enabled = false
+bind = ::
+;port = 5679
+;advertised_uri = tcp://hostname.local:5679
+;etcd_endpoints = localhost:2379
