use the correct name for the password hash

--- a/static/docs/schemas/users.yaml
+++ b/static/docs/schemas/users.yaml
@@ -21,7 +21,7 @@ user-properties:
       enum:
       - SHA512
       - SHA256
-      - Bcrypt
+      - lavinmq_bcrypt
       - MD5
     password_hash:
       type: string
