fixup! ameba fixes

--- a/.ameba.yml
+++ b/.ameba.yml
@@ -28,3 +28,6 @@ Lint/UnneededDisableDirective:
 Naming/BlockParameterName:
   Excluded:
   - ./**/*.cr
+
+Documentation/DocumentationAdmonition:
+  Enabled: false
