Add enterprise OAuth2 support with hybrid JWT/userinfo validation
- Implement hybrid OAuth2 handler (JWT primary, userinfo fallback)
- Add JWKS client with key caching
- Add JWT validator with claims extraction
- Configure OAuth2 via INI files (jwks_uri, oauth2_userinfo_url, etc.)
- Support both JWT tokens and opaque tokens
- Create temporary OAuth users with configurable permissions
- Note: JWK to PEM conversion limited by Crystal OpenSSL bindings
- Userinfo endpoint validation fully functional

--- a/extras/lavinmq.ini
+++ b/extras/lavinmq.ini
@@ -27,3 +27,42 @@ bind = ::
 ;port = 5679
 ;advertised_uri = tcp://hostname.local:5679
 ;etcd_endpoints = localhost:2379
+
+[auth]
+# Authentication chain (tries each backend in order)
+;auth_backends = oauth,basic
+
+# ===== JWT/JWKS Validation (Enterprise - Primary Method) =====
+# Validates JWT tokens by verifying signature against JWKS
+;jwks_uri = https://auth.example.com/.well-known/jwks.json
+;jwt_issuer = https://auth.example.com
+;jwt_audience = lavinmq
+;oauth2_jwks_cache_ttl = 3600
+
+# ===== Userinfo Endpoint Validation (Fallback for opaque tokens) =====
+# Validates tokens by calling OAuth provider's userinfo endpoint
+;oauth2_userinfo_url = https://api.github.com/user
+;oauth2_username_claim = login
+;oauth2_username_prefix = github:
+;oauth2_default_vhost = /
+
+# ===== Example Configurations =====
+
+# GitHub (userinfo only - opaque tokens)
+;auth_backends = oauth,basic
+;oauth2_userinfo_url = https://api.github.com/user
+;oauth2_username_claim = login
+;oauth2_username_prefix = github:
+
+# Auth0 (JWT with JWKS)
+;auth_backends = oauth,basic
+;jwks_uri = https://YOUR_DOMAIN.auth0.com/.well-known/jwks.json
+;jwt_issuer = https://YOUR_DOMAIN.auth0.com/
+;jwt_audience = lavinmq
+;oauth2_username_claim = preferred_username
+
+# Keycloak (JWT with JWKS)
+;auth_backends = oauth,basic
+;jwks_uri = https://keycloak.example.com/realms/YOUR_REALM/protocol/openid-connect/certs
+;jwt_issuer = https://keycloak.example.com/realms/YOUR_REALM
+;jwt_audience = lavinmq
