fixup! install dev shards before make test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,8 +87,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
 
+      - name: Install dev shards
+        run: shards install
       - name: Spec
-      - run: shards install
         run: make test
 
   spec_osx:
