Clean up CLAUDE.md to free up context space
Our previous CLAUDE.md was verbose and contained a lot of
information that Claude can infer from the codebase itself.

CLAUDE.md now focuses on actionable items, file organization,
and key patterns to be aware.

Moving auto-formatting commands to .claude/settings.json
Crystal and JavaScript files will be auto-formatted on save

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 *.swp
 shard.override.yml
 config.ini
-*.pem
+/*.pem
 perf.data*
 massif.*
 node_modules
@@ -19,3 +19,4 @@ package-lock.json
 /playwright-report/
 /static/views/
 .DS_Store
+.claude/settings.local.json
