Add API, CLI, UI support for webhook signature secret
- Mask secrets in API responses (keys ending in -secret or -password)
- Add --dest-signature-secret option to lavinmqctl add_shovel
- Add signature secret field to shovel UI (shown for HTTP destinations)
- Update OpenAPI docs with dest-signature-secret parameter
- Update changelog and README

--- a/static/docs/schemas/parameters.yaml
+++ b/static/docs/schemas/parameters.yaml
@@ -85,6 +85,14 @@ shovel-value:
       type: string
       description: Routing key for destination exchange publishing (only used with dest-exchange).
       example: "routing.key"
+    dest-signature-secret:
+      type: string
+      description: |
+        Secret key(s) for signing webhook requests per the Standard Webhooks specification.
+        When set, adds webhook-id, webhook-timestamp, and webhook-signature headers to HTTP requests.
+        Multiple space-delimited secrets can be provided for zero-downtime key rotation.
+        Only applies when dest-uri is HTTP(S).
+      example: "whsec_current_key whsec_old_key"
     src-prefetch-count:
       type: integer
       description: Number of messages to prefetch from source.
@@ -110,15 +118,27 @@ shovel-value:
   required:
     - src-uri
     - dest-uri
-  example:
-    src-uri: amqp://guest:guest@localhost:5672/%2f
-    dest-uri: amqp://guest:guest@remote-host:5672/%2f
-    src-queue: source-queue
-    dest-queue: dest-queue
-    src-prefetch-count: 1000
-    src-delete-after: never
-    reconnect-delay: 5
-    ack-mode: on-confirm
+  examples:
+    amqp-to-amqp:
+      summary: AMQP to AMQP shovel
+      value:
+        src-uri: amqp://guest:guest@localhost:5672/%2f
+        dest-uri: amqp://guest:guest@remote-host:5672/%2f
+        src-queue: source-queue
+        dest-queue: dest-queue
+        src-prefetch-count: 1000
+        src-delete-after: never
+        reconnect-delay: 5
+        ack-mode: on-confirm
+    http-webhook:
+      summary: AMQP to HTTP webhook with Standard Webhooks signature
+      value:
+        src-uri: amqp://guest:guest@localhost:5672/%2f
+        dest-uri: https://example.com/webhook
+        src-queue: events-queue
+        dest-signature-secret: whsec_my_secret_key
+        src-prefetch-count: 100
+        ack-mode: on-confirm
 
 federation-upstream-value:
   type: object
