Add `--pidfile` support
Write the process ID (PID) to a file, to allow neat things like

    kill -HUP $(</tmp/lavinmq.pid)
    kill -TERM $(</tmp/lavinmq.pid)

--- a/extras/lavinmq.ini
+++ b/extras/lavinmq.ini
@@ -1,6 +1,7 @@
 [main]
 data_dir = /var/lib/lavinmq
 log_level = info
+;pidfile = /var/run/lavinmq.pid
 ;default_user_only_loopback = true
 ;tls_cert = /etc/lavinmq/cert.pem
 ;tls_key = /etc/lavinmq/key.pem
