CI: use macOS 15 and larger runner
macOS 14 is Sonoma
macOS 15 is Sequoia

The latest version is Tahoe (macOS 26).

The specs of macos-14 is 3 CPU (M1) and 7 GB RAM:
https://docs.github.com/en/actions/reference/runners/github-hosted-runners

The specs of macos-15-xlarge is 5 CPU (M2) and 14 GB RAM:
https://docs.github.com/en/actions/reference/runners/larger-runners#available-macos-larger-runners-and-labels

I want to try a larger runner to see if it will help with the stability
of the specs on macOS.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,8 +91,8 @@ jobs:
         run: make test
 
   spec_osx:
-    name: Spec OS X
-    runs-on: macos-14
+    name: Spec macOS
+    runs-on: macos-15-xlarge
     timeout-minutes: 10
     steps:
       - name: Install dependencies
