Improve checkout in "Get patch file" step
- For pull requests: Uses github.event.pull_request.head.repo.full_name
  (the fork) and github.event.pull_request.head.ref (the PR branch)
- For push/other events: Falls back to github.repository and github.ref

This means when you push to your fork or create a PR from your fork, it
will use the patch file from your fork's branch instead of always
pulling from cloudamqp/lavinmq.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -227,9 +227,9 @@ jobs:
       - name: Get patch file
         uses: actions/checkout@v6
         with:
-          repository: cloudamqp/lavinmq
+          repository: ${{ github.event.pull_request.head.repo.full_name || github.repository }}
+          ref: ${{ github.event.pull_request.head.ref || github.ref }}
           path: lavinmq
-          # only checkout the lint rules
           sparse-checkout: |
             .github/rabbitmq-java-client.patch
           sparse-checkout-cone-mode: false
