Don't use --error-on-warnings on release build
It completely stops a build that "just" has warnings, we do want it in
CI though.

Related to #1616

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -124,7 +124,7 @@ jobs:
         uses: actions/checkout@v6
 
       - name: Build lavinmq
-        run: make -j bin/lavinmq bin/lavinmqctl DOCS= CRYSTAL_FLAGS=-Dbake_static
+        run: make -j bin/lavinmq bin/lavinmqctl DOCS= CRYSTAL_FLAGS="--error-on-warnings -Dbake_static"
 
       - name: Print build info
         run: bin/lavinmq --build-info
