unpin crystal version so we use latest again

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
     name: Format check
     runs-on: ubuntu-latest
     continue-on-error: true
-    container: 84codes/crystal:1.18.2-ubuntu-24.04
+    container: 84codes/crystal:latest-ubuntu-24.04
     steps:
       - uses: actions/checkout@v6
       - run: crystal tool format --check
@@ -41,7 +41,7 @@ jobs:
     name: Lint check
     runs-on: ubuntu-latest
     continue-on-error: true
-    container: 84codes/crystal:1.18.2-ubuntu-24.04
+    container: 84codes/crystal:latest-ubuntu-24.04
     steps:
       - name: Checkout
         uses: actions/checkout@v6
@@ -75,7 +75,7 @@ jobs:
   spec:
     name: Spec
     runs-on: ubuntu-latest
-    container: 84codes/crystal:1.18.2-ubuntu-24.04
+    container: 84codes/crystal:latest-ubuntu-24.04
     timeout-minutes: 10
     steps:
       - name: Print Crystal version
@@ -114,7 +114,7 @@ jobs:
   compile:
     name: Compile LavinMQ
     runs-on: ubuntu-latest
-    container: 84codes/crystal:1.18.2-ubuntu-24.04
+    container: 84codes/crystal:latest-ubuntu-24.04
 
     steps:
       - name: Install dependencies
