Fix OAuth2 scope format to match RabbitMQ spec

--- a/extras/lavinmq.ini
+++ b/extras/lavinmq.ini
@@ -1,6 +1,7 @@
 [main]
 data_dir = /var/lib/lavinmq
 log_level = info
+auth_backends = oauth,local
 ;pidfile = /var/run/lavinmq.pid
 ;default_user_only_loopback = true
 ;tls_cert = /etc/lavinmq/cert.pem
@@ -28,3 +29,8 @@ bind = ::
 ;port = 5679
 ;advertised_uri = tcp://hostname.local:5679
 ;etcd_endpoints = localhost:2379
+
+[oauth]
+issuer = https://test-giant-beige-hawk.rmq7.cloudamqp.com/realms/lavinmq-dev/
+resource_server_id = kickster-lavin
+preferred_username_claims = sub,preferred_username,email
